--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ hyper = "0.6.13"
 serde = "*"
 serde_json = "*"
 steamwebapi = "*"
+websocket = "~0.13.1"
 
 [dependencies.redis]
 git = "https://github.com/mitsuhiko/redis-rs.git"
+
