--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ hyper = "0.6.13"
 serde = "*"
 serde_json = "*"
 steamwebapi = "~0.4.0"
-steamid = "0.1.0"
 websocket = "~0.13.1"
 quick-error = "~0.1.4"
 postgres = "~0.10"
+redis = "~0.5.1"
 
-[dependencies.redis]
-git = "https://github.com/mitsuhiko/redis-rs.git"
-
+[dependencies.steamid]
+version = "0.3.0"
+features = ["redis-support"]
